# factor

./: Cargo.toml  README.md
.github/workflows/: deploy.yml  rust.yml
client/: Cargo.toml
client/examples/: rough.rs  surface.rs
client/src/: action.rs  cell.rs  chunks.rs  core_ui.rs  lib.rs  main.rs  player.rs  render.rs  utils.rs
client/src/net/: mod.rs  native.rs  wasm.rs
client/src/settings/: mod.rs  native.rs  wasm.rs
common/: Cargo.toml
common/src/: cell.rs  coords.rs  data.rs  geo.rs  glue.rs  healpix.rs  lib.rs  mesh.rs  noise.rs  rcu.rs  util.rs
common/src/glue/: mod.rs
examples/: noise-terrain.rs  tectonic.rs  terrain.rs
server/: Cargo.toml
server/examples/: noise-terrain.rs  tectonic.rs  terrain.rs
server/src/: chunk.rs  chunks.rs  config.rs  default-config.toml  lib.rs  main.rs  orbit.rs  player.rs  state.rs  tables.rs
server/src/storage/: native.rs
server/src/terrain/: bevy.rs  climate.rs  mod.rs  noise.rs  tectonic.rs
server/src/utils/: ctx_pool.rs  database.rs  db_value.rs  mesh.rs  mod.rs  option_bytes.rs
src/: config.rs  glue.rs  healpix.rs  lib.rs  main.rs  orbit.rs  render.rs  state.rs  terrain.rs  utils.rs
src/storage/: mod.rs  native.rs  web.rs
src/terrain/: bevy.rs  climate.rs  mod.rs  noise.rs  tectonic.rs
src/utils/: database.rs
static-deployment/: _base_example.html  index.html
static-deployment/examples/terrain/: terrain.toml
