[package]
name = "factor"
version.workspace = true
edition.workspace = true

[workspace]
members = ["client", "common", "server"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
factor-common.workspace = true
factor-client.path = "client/"
factor-server.path = "server/"
hex.workspace = true
triomphe.workspace = true
unsize.workspace = true
tracing = "0.1.41"

[profile.dev.package.'*']
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.github-release] # Release speeds but builds fast enough that CI doesn't time out
inherits = "release"
lto = "thin"
codegen-units = 16

[lints]
workspace = true

[workspace.dependencies]
factor-common.path = "common/"

async-net = "2.0.0"
async-tungstenite = { version = "0.28.2", features = ["async-tls"] }
bevy = { version = "0.15.1", default-features = false, features = ["bevy_color", "bevy_state", "multi_threaded", "trace"] }
bevy_egui = { version = "0.32.0", default-features = false, features = ["default_fonts", "render"] }
bytemuck = { version = "1.21.0", features = ["derive", "extern_crate_std"] }
cdshealpix = "0.7.3"
futures-util = "0.3.31"
futures-sink = "0.3.31"
hex = { version = "0.4.3", features = ["serde"] }
itertools = "0.14.0"
ordered-float = "4.6.0"
postcard = { version = "1.0.10", default-features = false, features = ["use-std"] }
quick_cache = "0.6.9"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
toml = "0.8.19"
triomphe = { version = "0.1.14", features = ["unsize"] }
tinyset = "0.5.1"
unsize = "1.1.0"

[workspace.lints.clippy]
type-complexity = "allow"
too-many-arguments = "deny"
unnecessary-literal-unwrap = "allow"
