[package]
name = "factor"
version.workspace = true
edition.workspace = true

[workspace]
members = ["client", "common", "server"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[dependencies]
bevy.workspace = true
bevy_egui.workspace = true
factor-common.workspace = true
factor-client.path = "client/"
factor-server.path = "server/"
hex.workspace = true
triomphe.workspace = true
unsize.workspace = true
tracing = "0.1.41"

[profile.dev.package.'*']
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.github-release] # Release speeds but builds fast enough that CI doesn't time out
inherits = "release"
lto = "thin"
codegen-units = 16

[lints]
workspace = true

[workspace.dependencies]
factor-common.path = "common/"

async-net = "2.0.0"
async-tungstenite = { version = "0.29.1", features = ["async-tls"] }
bevy = { version = "0.16.1", default-features = false, features = ["bevy_color", "bevy_state", "multi_threaded", "trace"] }
bevy_egui = { version = "0.34.1", default-features = false, features = ["default_fonts", "render"] }
bytemuck = { version = "1.23.0", features = ["derive", "extern_crate_std"] }
futures-util = "0.3.31"
futures-sink = "0.3.31"
healpix = "0.3.0"
hex = { version = "0.4.3", features = ["serde"] }
itertools = "0.14.0"
ordered-float = "5.0.0"
postcard = { version = "1.0.10", default-features = false, features = ["use-std"] }
quick_cache = "0.6.14"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8.22"
triomphe = { version = "0.1.14", features = ["unsize"] }
tinyset = "0.5.2"
unsize = "1.1.0"

[workspace.lints.clippy]
type-complexity = "allow"
too-many-arguments = "deny"
unnecessary-literal-unwrap = "allow"
