[package]
name = "factor-client"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
bevy.workspace = true
bevy_egui.workspace = true
factor-common.workspace = true
futures-sink.workspace = true
futures-util.workspace = true
itertools.workspace = true
quick_cache.workspace = true
thiserror.workspace = true
tinyset.workspace = true
triomphe.workspace = true
unsize.workspace = true

[dev-dependencies]
rand.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
ws_stream_wasm.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-net.workspace = true
async-tungstenite.workspace = true

[lints]
workspace = true
