[package]
name = "factor-client"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true, features = ["bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_text", "bevy_window", "bevy_winit", "default_font", "tonemapping_luts", "webgl2", "x11"] }
bevy_egui.workspace = true
factor-common.workspace = true
futures-sink.workspace = true
futures-util.workspace = true
leafwing-input-manager = "0.16.0"
ordered-float.workspace = true
serde.workspace = true
thiserror.workspace = true
tinyset.workspace = true
toml.workspace = true
triomphe.workspace = true

[dev-dependencies]
rand.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
ws_stream_wasm = "0.7.4"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
etcetera = "0.8.0"
async-net.workspace = true
async-tungstenite.workspace = true

[lints]
workspace = true
