[package]
name = "factor-common"
version.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
bytemuck.workspace = true
cdshealpix.workspace = true
copyvec = "0.2.1"
futures-sink.workspace = true
hex.workspace = true
hmac-sha256 = "1.1.7"
postcard.workspace = true
quick_cache.workspace = true
serde.workspace = true
tinyset.workspace = true
triomphe.workspace = true

[lints]
workspace = true
