[package]
name = "factor-common"
version.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
bytemuck.workspace = true
copyvec = "0.2.1"
futures-sink.workspace = true
healpix.workspace = true
hex.workspace = true
hmac-sha256 = "1.1.7"
postcard.workspace = true
quick_cache.workspace = true
serde.workspace = true
tinyset.workspace = true
triomphe.workspace = true

[lints]
workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3.1", features = ["wasm_js"] }