[package]
name = "factor-server"
version.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
factor-common.workspace = true
bytemuck.workspace = true
cdshealpix.workspace = true
futures-util.workspace = true
hex.workspace = true
itertools.workspace = true
postcard.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tinyset.workspace = true
toml.workspace = true
triomphe.workspace = true
unsize.workspace = true

base64 = "0.22.1"
bitflags = { version = "2.6.0", features = ["bytemuck"] }
crossbeam-channel = "0.5.13"
once_map = { version = "0.4.21", features = ["serde"] }
ordered-float = "4.5.0"
papaya = "0.1.6"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
redb = { version = "2.2.0", features = ["logging"] }
rayon = "1.10.0"
wasm-timer = "0.2.5"

[dev-dependencies]
bevy = { workspace = true, features = ["bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_window", "bevy_winit", "tonemapping_luts", "webgl2", "x11"] }
bevy_egui.workspace = true
rfd = "0.15.0"
itertools.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = ["Document", "Storage", "Window", "console"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
web-time = "1.1.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
etcetera = "0.8.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.162"

[lints]
workspace = true
