[package]
name = "factor-server"
version.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
factor-common.workspace = true
bytemuck.workspace = true
healpix.workspace = true
hex.workspace = true
itertools.workspace = true
ordered-float.workspace = true
postcard.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tinyset.workspace = true
toml.workspace = true
triomphe.workspace = true
unsize.workspace = true

base64 = "0.22.1"
bitflags = { version = "2.6.0", features = ["bytemuck"] }
crossbeam-channel = "0.5.13"
either = "1.13.0"
priority-queue = "2.1.1"
rand_distr = "0.5.0"
rand_xoshiro = "0.7.0"
redb = { version = "2.2.0", features = ["logging"] }
wasm-timer = "0.2.5"
rayon = "1.10.0"

[dev-dependencies]
bevy = { workspace = true, features = ["bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_sprite", "bevy_window", "bevy_winit", "tonemapping_luts", "webgl2", "x11"] }
bevy_egui.workspace = true
rfd = "0.15.0"
itertools.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3.1", features = ["wasm_js"] }
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = ["Document", "Storage", "Window", "console"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
etcetera = "0.10.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.162"

[lints]
workspace = true
